Changement du SDK à java 8. Changement des libraries utilisées pour les http requests en API